--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "15.4.2",
-    "react-native": "0.42.0"
+    "react-native": "0.42.0",
+    "react-native-svg": "^5.1.5"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
