--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.42.0",
-    "react-native-svg": "^5.1.5"
+    "react-native-svg": "^5.1.5",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "redux-async-queue": "^1.0.0",
+    "redux-logger": "^2.8.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -21,6 +26,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
     "jest": "19.0.2",
+    "flow-bin": "^0.38.0",
     "react-test-renderer": "15.4.2"
   },
   "jest": {
