--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,9 +82,24 @@ def enableSeparateBuildPerCPUArchitecture = false
  */
 def enableProguardInReleaseBuilds = false
 
+//一. 添加Fabric插件
+buildscript {
+    repositories {
+        //1. 添加插件仓库地址
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        //2. 添加fabric插件
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
+//3. 应用插件
+apply plugin: 'io.fabric'
+
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.learnrn"
@@ -125,10 +140,20 @@ android {
     }
 }
 
+//二. 添加Fabric库
+repositories {
+    //1. 添加Fabric库的仓库地址
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    // 2. 添加Fabirc库
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.2@aar') {
+        transitive = true;
+    }
 }
 
 // Run this once to be able to run the application with BUCK
