--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.42.0",
+    "react-native-fabric": "^0.4.1",
     "react-native-svg": "^5.1.5"
   },
   "devDependencies": {
