--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-fabric": "^0.4.1",
-    "react-native-svg": "^5.1.5"
+    "react-native-svg": "^5.1.5",
+    "react-navigation": "^1.0.0-beta.9"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
