--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 
+
 import com.android.build.OutputFile
 
 /**
@@ -66,6 +67,12 @@ import com.android.build.OutputFile
  */
 
 apply from: "../../node_modules/react-native/react.gradle"
+
+// 矢量图库
+project.ext.vectoricons = [
+        iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf' ] // Name of the font files you want to copy
+]
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -147,6 +154,8 @@ repositories {
 }
 
 dependencies {
+    compile project(':react-native-svg')
+    compile project(':react-native-fabric')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
@@ -155,6 +164,7 @@ dependencies {
         transitive = true;
     }
     compile project(':react-native-fabric')         // react-native-fabric
+    compile project(':react-native-vector-icons')
 }
 
 // Run this once to be able to run the application with BUCK
