--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.42.0",
     "react-native-fabric": "^0.4.1",
     "react-native-svg": "^5.1.5",
+    "react-native-vector-icons": "^4.1.1",
     "react-navigation": "^1.0.0-beta.9"
   },
   "devDependencies": {
