--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,7 @@ repositories {
 }
 
 dependencies {
+    compile project(':react-native-image-picker')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
@@ -155,6 +156,7 @@ dependencies {
         transitive = true;
     }
     compile project(':react-native-fabric')         // react-native-fabric
+    compile project(':react-native-image-picker')   // react-native-image-picker
 }
 
 // Run this once to be able to run the application with BUCK
