--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-fabric": "^0.4.1",
+    "react-native-image-picker": "^0.26.3",
     "react-native-svg": "^5.1.5"
   },
   "devDependencies": {
