--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2",
+    "mobx-utils": "^3.0.0",
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-fabric": "^0.4.1",
@@ -15,7 +18,9 @@
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "babel-jest": "19.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "1.9.1",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
