--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.4.2",
-    "react-native": "0.42.0",
+    "react": "^16.0.0-alpha.12",
+    "react-native": "0.46.4",
     "react-native-fabric": "^0.4.1",
     "react-native-svg": "^5.1.5",
     "react-navigation": "^1.0.0-beta.11"
