--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,6 +33,13 @@ import com.android.build.OutputFile
  *   // bundleInPaidRelease: true,
  *   // bundleInBeta: true,
  *
+ *   // whether to disable dev mode in custom build variants (by default only disabled in release)
+ *   // for example: to disable dev mode in the staging build type (if configured)
+ *   devDisabledInStaging: true,
+ *   // The configuration property can be in the following formats
+ *   //         'devDisabledIn${productFlavor}${buildType}'
+ *   //         'devDisabledIn${buildType}'
+ *
  *   // the root of your project, i.e. where "package.json" lives
  *   root: "../../",
  *
@@ -58,7 +65,7 @@ import com.android.build.OutputFile
  *   inputExcludes: ["android/**", "ios/**"],
  *
  *   // override which node gets called and with what additional arguments
- *   nodeExecutableAndArgs: ["node"]
+ *   nodeExecutableAndArgs: ["node"],
  *
  *   // supply additional arguments to the packager
  *   extraPackagerArgs: []
@@ -82,24 +89,9 @@ def enableSeparateBuildPerCPUArchitecture = false
  */
 def enableProguardInReleaseBuilds = false
 
-//一. 添加Fabric插件
-buildscript {
-    repositories {
-        //1. 添加插件仓库地址
-        maven { url 'https://maven.fabric.io/public' }
-    }
-
-    dependencies {
-        //2. 添加fabric插件
-        classpath 'io.fabric.tools:gradle:1.+'
-    }
-}
-//3. 应用插件
-apply plugin: 'io.fabric'
-
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.learnrn"
@@ -140,21 +132,12 @@ android {
     }
 }
 
-//二. 添加Fabric库
-repositories {
-    //1. 添加Fabric库的仓库地址
-    maven { url 'https://maven.fabric.io/public' }
-}
-
 dependencies {
+    compile project(':react-native-svg')
+    compile project(':react-native-background-timer')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    // 2. 添加Fabirc库
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.2@aar') {
-        transitive = true;
-    }
-    compile project(':react-native-fabric')         // react-native-fabric
 }
 
 // Run this once to be able to run the application with BUCK
