--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "^16.0.0-alpha.12",
     "react-native": "0.46.4",
-    "react-native-fabric": "^0.4.1",
+    "react-native-background-timer": "^1.2.0",
     "react-native-svg": "^5.1.5",
     "react-navigation": "^1.0.0-beta.11"
   },
